--- a/marvel-portal/src/app/components/comics/comics.component.scss
+++ b/marvel-portal/src/app/components/comics/comics.component.scss
@@ -1,13 +1,12 @@
 .comics-container {
   width: 100%;
   height: 100%;
-  padding-top: 10px;
+  padding: 10px 30px 0 30px;
 
   .comics-list {
     width: 100%;
-    max-width: 1920px;
-    padding: 0 100px;
-    column-gap: 8px;
+    padding: 0;
+    column-gap: 1%;
     row-gap: 20px;
     margin: 0;
     display: flex;
@@ -15,7 +14,8 @@
     flex-wrap: wrap;
 
     .comics-item {
-      width: 10%;
+      width: 192px;
+      //max-width: 192px;
       //height: 280px;
       list-style: none;
       display: flex;
