--- a/marvel-portal/src/app/components/events/events.component.scss
+++ b/marvel-portal/src/app/components/events/events.component.scss
@@ -1,5 +1,37 @@
 .events-container {
   width: 100%;
+  max-width: 1920px;
   height: 100%;
-  background-color: yellow;
+  padding: 10px 30px 0 30px;
+
+  .events-list {
+    width: 100%;
+    padding: 0;
+    column-gap: 1%;
+    row-gap: 20px;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    .events-item {
+      width: 192px;
+      //max-width: 192px;
+      //height: 280px;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      row-gap: 10px;
+
+      .events-button {
+        width: 100%;
+        height: 100%;
+
+        .events-thumbnail {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
