tela de quadrinhos sendo alimentada pela api

--- a/marvel-portal/src/app/components/comics/comics.component.scss
+++ b/marvel-portal/src/app/components/comics/comics.component.scss
@@ -25,6 +25,7 @@
       .comics-button {
         width: 100%;
         height: 100%;
+        padding: 0;
 
         .comics-thumbnail {
           width: 100%;
