criacao tela de detalhes

--- a/marvel-portal/src/app/app.component.html
+++ b/marvel-portal/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<main *ngIf="step.name === 'home'">Main</main>
+<!-- <main *ngIf="step.name === 'home'">Main</main>
 
 <app-comics *ngIf="step.name === 'quadrinhos'"></app-comics>
 
@@ -8,6 +8,8 @@
 
 <app-creators *ngIf="step.name === 'criadores'"></app-creators>
 
-<app-characters *ngIf="step.name === 'personagens'"></app-characters>
+<app-characters *ngIf="step.name === 'personagens'"></app-characters> -->
+
+<app-details></app-details>
 
 <app-footer (sendStep)="changeStep($event)"></app-footer>
