--- a/marvel-portal/src/app/app.component.scss
+++ b/marvel-portal/src/app/app.component.scss
@@ -21,7 +21,7 @@ app-footer {
   top: 90%;
 }
 
-app-comics, app-events, app-creators, app-characters {
+app-comics, app-events, app-creators, app-characters, app-details {
   display: flex;
   width: 100vw;
   height: 100vh;
