--- a/marvel-portal/src/app/components/comics/comics.component.scss
+++ b/marvel-portal/src/app/components/comics/comics.component.scss
@@ -21,6 +21,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 10px;
+      cursor: pointer;
 
       .comics-button {
         width: 100%;
