--- a/marvel-portal/src/app/app.component.html
+++ b/marvel-portal/src/app/app.component.html
@@ -1,15 +1,15 @@
 <app-header></app-header>
 
-<!-- <main *ngIf="step.name === 'home'">Main</main>
+<main *ngIf="step.name === 'home'">Main</main>
 
-<app-comics *ngIf="step.name === 'quadrinhos'"></app-comics>
+<app-comics *ngIf="step.name === 'quadrinhos'" (openDetailsComic)="openDetails($event)"></app-comics>
 
 <app-events *ngIf="step.name === 'eventos'"></app-events>
 
 <app-creators *ngIf="step.name === 'criadores'"></app-creators>
 
-<app-characters *ngIf="step.name === 'personagens'"></app-characters> -->
+<app-characters *ngIf="step.name === 'personagens'"></app-characters>
 
-<app-details></app-details>
+<app-details *ngIf="step.name === 'details'" [details]="details" (sendStep)="changeStep($event)"></app-details>
 
 <app-footer (sendStep)="changeStep($event)"></app-footer>
