--- a/marvel-portal/src/app/components/details/details.component.scss
+++ b/marvel-portal/src/app/components/details/details.component.scss
@@ -1,24 +1,41 @@
 .details-container {
-  width: 100%;
+  width: 60%;
   display: flex;
   flex-direction: row;
   padding: 2% 20%;
   column-gap: 2%;
   //background-color: rebeccapurple;
 
+  .go-back {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    left: 4%;
+    top: 8%;
+    padding: 0;
+  }
+
   .image-details-section {
     max-width: 400px;
     img {
-      width: 100%;
+      width: 400px;
     }
   }
 
   .text-details-section {
+    display: flex;
+    flex-direction: column;
     padding-right: 10%;
+    row-gap: 10px;
     .text-writer-penciler {
       display: flex;
       justify-content: space-between;
       flex-direction: row;
+    }
+
+    .button-variant {
+      width: 150px;
+      padding: 0;
     }
   }
 }
