--- a/marvel-portal/src/app/app.component.scss
+++ b/marvel-portal/src/app/app.component.scss
@@ -3,7 +3,7 @@ app-header {
   max-width: 1920px;
   display: flex;
   justify-content: center;
-  background: #000000;
+  //background: #000000;
   position: absolute;
   top: 0;
 }
