ajustes css do component header feitos

--- a/marvel-portal/src/app/components/header/header.component.html
+++ b/marvel-portal/src/app/components/header/header.component.html
@@ -28,8 +28,9 @@
 
     <button class="profile-button">
       <img src="../../../assets//no-profile.png" alt="profile image">
-      <span>Lucas Corrêa</span>
+      <span class="profile-name">Lucas Corrêa</span>
       <!-- <select>Opção de logout</select> -->
+      <span class="profile-select">v</span>
     </button>
   </div>
 
