--- a/marvel-portal/src/app/components/header/header.component.scss
+++ b/marvel-portal/src/app/components/header/header.component.scss
@@ -81,40 +81,67 @@
       justify-content: center;
       font-size: 14px;
     }
-
-    &:after {
-
-    }
   }
 
   .header-center {
     width: 30%;
+    height: 100%;
+    display: flex;
+    align-items: center;
     input {
       width: 100%;
+      height: 50%;
+      border-radius: 35px;
+      padding-left: 3%;
+      ::placeholder {
+        color: #D3D3D3;
+      }
     }
   }
 
   .header-right {
     width: 20%;
+    height: 100%;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    column-gap: 10%;
 
     .member-button {
-      width: 20%;
+      width: 40%;
+      height: 50%;
+      background: #CF1920;
+      color: #FFFFFF;
+      border: none;
     }
 
     .profile-button {
-      width: 20%;
-      height: 100%;
-      //background-color: red;
+      width: 50%;
+      height: 50%;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+      border: none;
+      background: none;
+      column-gap: 1%;
       img {
-        width: 100%;
+        width: 30%;
         height: 80%;
         object-fit: contain;
       }
+      .profile-name {
+        width: 44%;
+      }
+      .profile-select {
+        width: 24%;
+      }
+    }
+
+    .member-button, .profile-button {
+      padding: 0;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      border-radius: 25px;
+
     }
   }
 }
