fix bug de barra de rolagem eixo x e y

--- a/marvel-portal/src/app/app.component.html
+++ b/marvel-portal/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header (sendStep)="changeStep($event)"></app-header>
 
-<main *ngIf="step.name === 'home'">Main</main>
+<main *ngIf="step.name === 'home'"></main>
 
 <app-comics *ngIf="step.name === 'quadrinhos'" (openDetailsComic)="openDetails($event)"></app-comics>
 
