--- a/marvel-portal/src/app/app.component.scss
+++ b/marvel-portal/src/app/app.component.scss
@@ -1,16 +1,16 @@
 app-header {
-  width: 100vw;
-  max-width: 1920px;
+  width: 100%;
+  //max-width: 1920px;
   display: flex;
   justify-content: center;
   //background: #000000;
-  position: absolute;
-  top: 0;
+  //position: absolute;
+  //top: 0;
 }
 
 main {
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 100px);
   background: url(//p19-marketing-va.bytedgame.com/obj/g-marketing-assets-va/static/media/section01_bgs.b9c2b439.jpg) no-repeat 50%;
 }
 
