--- a/marvel-portal/src/app/app.component.scss
+++ b/marvel-portal/src/app/app.component.scss
@@ -23,7 +23,9 @@ app-footer {
 
 app-comics, app-events, app-creators, app-characters, app-details {
   display: flex;
-  width: 100vw;
-  height: 100vh;
-  margin-top: 50px;
+  width: 100%;
+  //height: 100vh;
+  //margin-top: 50px;
+  //margin: 10px 0;
+  padding-top: 10px;
 }
