--- a/marvel-portal/src/app/components/characters/characters.component.scss
+++ b/marvel-portal/src/app/components/characters/characters.component.scss
@@ -1,7 +1,7 @@
 .characters-container {
   width: 100%;
   height: 100%;
-  padding: 10px 30px 0 30px;
+  padding-left: 30px;
 
   .characters-list {
     width: 100%;
