--- a/marvel-portal/src/app/components/comics/comics.component.scss
+++ b/marvel-portal/src/app/components/comics/comics.component.scss
@@ -1,7 +1,7 @@
 .comics-container {
   width: 100%;
   height: 100%;
-  padding: 10px 30px 0 30px;
+  padding-left: 30px;
 
   .comics-list {
     width: 100%;
