--- a/marvel-portal/src/app/components/creators/creators.component.scss
+++ b/marvel-portal/src/app/components/creators/creators.component.scss
@@ -1,7 +1,7 @@
 .creators-container {
   width: 100%;
   height: 100%;
-  padding: 10px 30px 0 30px;
+  padding-left: 30px;
 
   .creators-list {
     width: 100%;
