--- a/marvel-portal/src/app/components/events/events.component.scss
+++ b/marvel-portal/src/app/components/events/events.component.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1920px;
   height: 100%;
-  padding: 10px 30px 0 30px;
+  padding-left: 30px;
 
   .events-list {
     width: 100%;
