--- a/marvel-portal/src/app/components/creators/creators.component.html
+++ b/marvel-portal/src/app/components/creators/creators.component.html
@@ -7,4 +7,6 @@
   </ul>
 
   <app-details *ngIf="creatorStep === 'details'" (changeStep)="goBack()" [details]="creator"></app-details>
+
+  <app-loading *ngIf="loading"></app-loading>
 </div>
