--- a/marvel-portal/src/app/components/characters/characters.component.scss
+++ b/marvel-portal/src/app/components/characters/characters.component.scss
@@ -1,7 +1,8 @@
 .characters-container {
   width: 100%;
   height: 100%;
-  padding-left: 30px;
+  padding: 30px;
+  background: rgba(0, 0, 0, .9);
 
   .characters-list {
     width: 100%;
@@ -12,9 +13,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 
     .characters-item {
       width: 192px;
+      height: 343px;
       //list-style: none;
       display: flex;
       flex-direction: column;
