--- a/marvel-portal/src/app/components/events/events.component.scss
+++ b/marvel-portal/src/app/components/events/events.component.scss
@@ -1,8 +1,9 @@
 .events-container {
   width: 100%;
-  max-width: 1920px;
+  //max-width: 1920px;
   height: 100%;
-  padding-left: 30px;
+  padding: 30px;
+  background: rgba(0, 0, 0, .9);
 
   .events-list {
     width: 100%;
@@ -13,6 +14,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 
     .events-item {
       width: 192px;
@@ -25,12 +27,21 @@
 
       .events-button {
         width: 100%;
-        height: 100%;
+        height: 313px;
+        padding: 0;
 
         .events-thumbnail {
           width: 100%;
           height: 100%;
         }
+      }
+
+      .events-title {
+        color: #FFFFFF;
+      }
+      .events-year {
+        color: #FFFFFF;
+        font-size: 12px;
       }
     }
   }
