tela de detalhes exibindo detalhes corretos de abas: quadrinhos, personagens, criadores, eventos

--- a/marvel-portal/src/app/components/characters/characters.component.html
+++ b/marvel-portal/src/app/components/characters/characters.component.html
@@ -6,7 +6,7 @@
     </button>
   </ul>
 
-  <app-details *ngIf="characterStep === 'details'" (changeStep)="goBack()" [details]="character"></app-details>
+  <app-details *ngIf="characterStep === 'details'" (changeStep)="goBack()" [details]="characterDetails"></app-details>
 
   <app-loading *ngIf="loading"></app-loading>
 </div>
