--- a/marvel-portal/src/app/components/comics/comics.component.html
+++ b/marvel-portal/src/app/components/comics/comics.component.html
@@ -9,7 +9,7 @@
     </li>
   </ul>
 
-  <app-details *ngIf="comicStep === 'details'" (changeStep)="goBack()" [details]="comic"></app-details>
+  <app-details *ngIf="comicStep === 'details'" (changeStep)="goBack()" [details]="comicDetails"></app-details>
 
   <app-loading *ngIf="loading"></app-loading>
 </div>
