--- a/marvel-portal/src/app/components/loading/loading.component.scss
+++ b/marvel-portal/src/app/components/loading/loading.component.scss
@@ -19,7 +19,7 @@
 
 .loading-container {
   width: 100%;
-  height: calc(100vh - 140px);
+  height: calc(100vh - 140px);;
   /* display: flex;
   justify-content: center;
   align-items: center; */
