--- a/marvel-portal/src/app/components/creators/creators.component.html
+++ b/marvel-portal/src/app/components/creators/creators.component.html
@@ -6,7 +6,7 @@
     </button>
   </ul>
 
-  <app-details *ngIf="creatorStep === 'details'" (changeStep)="goBack()" [details]="creator"></app-details>
+  <app-details *ngIf="creatorStep === 'details'" (changeStep)="goBack()" [details]="creatorDetails"></app-details>
 
   <app-loading *ngIf="loading"></app-loading>
 </div>
