--- a/marvel-portal/src/app/components/details/details.component.scss
+++ b/marvel-portal/src/app/components/details/details.component.scss
@@ -6,6 +6,10 @@
   column-gap: 2%;
   //background-color: rebeccapurple;
 
+  h3 {
+    margin: 0;
+  }
+
   .go-back {
     width: 100px;
     height: 50px;
@@ -26,16 +30,43 @@
     display: flex;
     flex-direction: column;
     padding-right: 10%;
-    row-gap: 10px;
-    .text-writer-penciler {
-      display: flex;
-      justify-content: space-between;
-      flex-direction: row;
+    row-gap: 40px;
+    color: #FFFFFF;
+    .text-title {
+      font-size: 40px;
     }
 
-    .button-variant {
+    .text-published {
+      h3 {
+        font-weight: 600;
+      }
+      p {
+        font-weight: 500;
+      }
+    }
+    .text-artists, .text-characters, .text-comics {
+      display: flex;
+      //justify-content: space-between;
+      flex-direction: column;
+      row-gap: 5px;
+      h3 {
+        font-weight: 600;
+      }
+      .artists-list, .characters-list, .comics-list {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        row-gap: 4px;
+        span {
+          font-weight: 500;
+        }
+      }
+    }
+
+    /* .button-variant {
       width: 150px;
       padding: 0;
-    }
+    } */
   }
 }
