--- a/marvel-portal/src/app/components/events/events.component.html
+++ b/marvel-portal/src/app/components/events/events.component.html
@@ -5,7 +5,7 @@
         <img src="{{event.thumbnail}}" alt="" class="events-thumbnail">
       </button>
       <span class="events-title">{{event.title}}</span>
-      <span class="events-year">{{event.start | date: 'longDate'}} - {{event.end | date: 'longDate'}}</span>
+      <span class="events-year">{{event.start | date: 'mediumDate'}} - {{event.end | date: 'mediumDate'}}</span>
     </li>
   </ul>
 
