--- a/marvel-portal/src/app/components/characters/characters.component.scss
+++ b/marvel-portal/src/app/components/characters/characters.component.scss
@@ -27,6 +27,13 @@
       border: none;
       background: #EC1D24;
 
+      &:hover {
+        background: #FFF;
+        .characters-name {
+          color: #EC1D24;
+        }
+      }
+
       .characters-thumbnail {
         width: 100%;
         height: 100%;
