--- a/marvel-portal/src/app/components/comics/comics.component.scss
+++ b/marvel-portal/src/app/components/comics/comics.component.scss
@@ -25,6 +25,12 @@
       row-gap: 10px;
       cursor: pointer;
 
+      &:hover {
+        .comics-title, .comics-year {
+          color: #EC1D24;
+        }
+      }
+
       .comics-button {
         width: 100%;
         height: 313px;
