--- a/marvel-portal/src/app/components/details/details.component.scss
+++ b/marvel-portal/src/app/components/details/details.component.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   padding: 2% 20%;
   column-gap: 2%;
+  position: relative;
   //background-color: rebeccapurple;
 
   h3 {
@@ -17,6 +18,17 @@
     left: 4%;
     top: 8%;
     padding: 0;
+    border-radius: 25px;
+    padding: 0;
+    background: #CF1920;
+    color: #FFFFFF;
+    text-transform: lowercase;
+    border: none;
+    &:hover {
+      background: #FFFFFF;
+      color: #CF1920;
+      border: 1px solid #CF1920;
+    }
   }
 
   .image-details-section {
