--- a/marvel-portal/src/app/components/events/events.component.scss
+++ b/marvel-portal/src/app/components/events/events.component.scss
@@ -25,6 +25,12 @@
       flex-direction: column;
       row-gap: 10px;
 
+      &:hover {
+        .events-title, .events-year {
+          color: #EC1D24;
+        }
+      }
+
       .events-button {
         width: 100%;
         height: 313px;
