--- a/marvel-portal/src/app/components/header/header.component.scss
+++ b/marvel-portal/src/app/components/header/header.component.scss
@@ -113,6 +113,11 @@
       background: #CF1920;
       color: #FFFFFF;
       border: none;
+      &:hover {
+        background: #FFFFFF;
+        color: #CF1920;
+        border: 1px solid #CF1920;
+      }
     }
 
     .profile-button {
@@ -141,7 +146,6 @@
       padding: 0;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       border-radius: 25px;
-
     }
   }
 }
