--- a/marvel-portal/src/app/components/header/header.component.scss
+++ b/marvel-portal/src/app/components/header/header.component.scss
@@ -88,6 +88,7 @@
     height: 100%;
     display: flex;
     align-items: center;
+    position: relative;
     input {
       width: 100%;
       height: 50%;
@@ -95,6 +96,21 @@
       padding-left: 3%;
       ::placeholder {
         color: #D3D3D3;
+      }
+    }
+    .center-button {
+      width: 20%;
+      height: 45%;
+      position: absolute;
+      right: 1.25%;
+      border-radius: 35px;
+      border: none;
+      background-color: #CF1920;
+      color: #FFFFFF;
+      &:hover {
+        background: #FFFFFF;
+        color: #CF1920;
+        border: 1px solid #CF1920;
       }
     }
   }
